
[Test/cassette_TestCommand_Transitive/TestCommand_Transitive/does_not_scan_transitive_dependencies_for_pom.xml_with_no-resolve - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "org.apache.logging.log4j:log4j-web",
          "ecosystem": "Maven"
        },
        "version": "2.14.1"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_Transitive/TestCommand_Transitive/does_not_scan_transitive_dependencies_for_requirements.txt_with_no-resolve - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "django",
          "ecosystem": "PyPI"
        },
        "version": "1.11.29"
      },
      "vulns": [
        {
          "id": "GHSA-68w8-qjq3-2gfm",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-6w2r-r2m5-xq5w",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-7xr5-9hcq-chf9",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-8x94-hmjh-97hq",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-frmv-pr5f-9mcr",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-qw25-v68c-qjf3",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-rrqc-c2jx-6jgv",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "PYSEC-2021-98",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "flask",
          "ecosystem": "PyPI"
        },
        "version": "1.0.0"
      },
      "vulns": [
        {
          "id": "GHSA-68rp-wp8r-4726",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-m2qf-hxjv-5gpq",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "PYSEC-2023-62",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "requests",
          "ecosystem": "PyPI"
        },
        "version": "2.20.0"
      },
      "vulns": [
        {
          "id": "GHSA-9hjg-9r4m-mvj7",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-9wx4-h78v-vm56",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-gc5v-m9x4-r6x2",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-j8r2-6x86-q33q",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "PYSEC-2023-74",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand_Transitive/TestCommand_Transitive/fall_back_to_the_offline_extractor_if_resolution_failed - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "flask",
          "ecosystem": "PyPI"
        },
        "version": "1.0.0"
      },
      "vulns": [
        {
          "id": "GHSA-68rp-wp8r-4726",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-m2qf-hxjv-5gpq",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "PYSEC-2023-62",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "flask-cors",
          "ecosystem": "PyPI"
        },
        "version": "1.0.0"
      },
      "vulns": [
        {
          "id": "GHSA-43qf-4rqw-9q2g",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-7rxf-gvfg-47g4",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-84pr-m4jr-85g5",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-8vgw-p6qm-5gr7",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-hxwh-jpp2-84pm",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-xc3p-ff3m-f46v",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "PYSEC-2020-43",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "PYSEC-2024-71",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "pandas",
          "ecosystem": "PyPI"
        },
        "version": "0.23.4"
      },
      "vulns": [
        {
          "id": "PYSEC-2020-73",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand_Transitive/TestCommand_Transitive/resolves_transitive_dependencies_with_native_data_source - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "com.android.support:animated-vector-drawable",
          "ecosystem": "Maven"
        },
        "version": "24.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.android.support:appcompat-v7",
          "ecosystem": "Maven"
        },
        "version": "24.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.android.support:mediarouter-v7",
          "ecosystem": "Maven"
        },
        "version": "24.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.android.support:palette-v7",
          "ecosystem": "Maven"
        },
        "version": "24.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.android.support:support-annotations",
          "ecosystem": "Maven"
        },
        "version": "24.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.android.support:support-v4",
          "ecosystem": "Maven"
        },
        "version": "24.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.android.support:support-vector-drawable",
          "ecosystem": "Maven"
        },
        "version": "24.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-ads",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-ads-lite",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-analytics",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-analytics-impl",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-appinvite",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-auth",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-auth-base",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-awareness",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-base",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-basement",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": [
        {
          "id": "GHSA-cm6r-892j-jv2g",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-cast",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-cast-framework",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-clearcut",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-drive",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-fitness",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-games",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-gass",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-gcm",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-identity",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-iid",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-instantapps",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-location",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-maps",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-nearby",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-panorama",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-places",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-plus",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-safetynet",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-tagmanager",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-tagmanager-api",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-tagmanager-v4-impl",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-tasks",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-vision",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-wallet",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-wearable",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-analytics",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-analytics-impl",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-appindexing",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-auth",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-common",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-config",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-crash",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-database",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-database-connection",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-iid",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-messaging",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-storage",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-storage-common",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "org.apache.logging.log4j:log4j-api",
          "ecosystem": "Maven"
        },
        "version": "2.14.1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "org.apache.logging.log4j:log4j-core",
          "ecosystem": "Maven"
        },
        "version": "2.14.1"
      },
      "vulns": [
        {
          "id": "GHSA-3pxv-7cmr-fjr4",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-6hg6-v5c8-fphq",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-7rjr-3q55-vv33",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-8489-44mv-ggj8",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-jfh8-c2jp-5v3q",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-p6xc-xr62-6r2g",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-vc5p-v9hr-52mj",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "org.apache.logging.log4j:log4j-web",
          "ecosystem": "Maven"
        },
        "version": "2.14.1"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_Transitive/TestCommand_Transitive/scan_local_disk_transitive_dependencies - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "django",
          "ecosystem": "PyPI"
        },
        "version": "1.11.29"
      },
      "vulns": [
        {
          "id": "GHSA-68w8-qjq3-2gfm",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-6w2r-r2m5-xq5w",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-7xr5-9hcq-chf9",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-8x94-hmjh-97hq",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-frmv-pr5f-9mcr",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-qw25-v68c-qjf3",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-rrqc-c2jx-6jgv",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "PYSEC-2021-98",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "flask",
          "ecosystem": "PyPI"
        },
        "version": "1.0.0"
      },
      "vulns": [
        {
          "id": "GHSA-68rp-wp8r-4726",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-m2qf-hxjv-5gpq",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "PYSEC-2023-62",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "numpy",
          "ecosystem": "PyPI"
        },
        "version": "2.3.1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "requests",
          "ecosystem": "PyPI"
        },
        "version": "2.20.0"
      },
      "vulns": [
        {
          "id": "GHSA-9hjg-9r4m-mvj7",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-9wx4-h78v-vm56",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-gc5v-m9x4-r6x2",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-j8r2-6x86-q33q",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "PYSEC-2023-74",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand_Transitive/TestCommand_Transitive/scans_dependencies_from_multiple_registries - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "com.android.support:animated-vector-drawable",
          "ecosystem": "Maven"
        },
        "version": "24.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.android.support:appcompat-v7",
          "ecosystem": "Maven"
        },
        "version": "24.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.android.support:mediarouter-v7",
          "ecosystem": "Maven"
        },
        "version": "24.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.android.support:palette-v7",
          "ecosystem": "Maven"
        },
        "version": "24.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.android.support:support-annotations",
          "ecosystem": "Maven"
        },
        "version": "24.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.android.support:support-v4",
          "ecosystem": "Maven"
        },
        "version": "24.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.android.support:support-vector-drawable",
          "ecosystem": "Maven"
        },
        "version": "24.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-ads",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-ads-lite",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-analytics",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-analytics-impl",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-appinvite",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-auth",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-auth-base",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-awareness",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-base",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-basement",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": [
        {
          "id": "GHSA-cm6r-892j-jv2g",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-cast",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-cast-framework",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-clearcut",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-drive",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-fitness",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-games",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-gass",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-gcm",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-identity",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-iid",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-instantapps",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-location",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-maps",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-nearby",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-panorama",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-places",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-plus",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-safetynet",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-tagmanager",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-tagmanager-api",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-tagmanager-v4-impl",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-tasks",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-vision",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-wallet",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.android.gms:play-services-wearable",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-analytics",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-analytics-impl",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-appindexing",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-auth",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-common",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-config",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-crash",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-database",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-database-connection",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-iid",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-messaging",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-storage",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "com.google.firebase:firebase-storage-common",
          "ecosystem": "Maven"
        },
        "version": "10.0.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "org.apache.logging.log4j:log4j-api",
          "ecosystem": "Maven"
        },
        "version": "2.14.1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "org.apache.logging.log4j:log4j-core",
          "ecosystem": "Maven"
        },
        "version": "2.14.1"
      },
      "vulns": [
        {
          "id": "GHSA-3pxv-7cmr-fjr4",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-6hg6-v5c8-fphq",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-7rjr-3q55-vv33",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-8489-44mv-ggj8",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-jfh8-c2jp-5v3q",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-p6xc-xr62-6r2g",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-vc5p-v9hr-52mj",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "org.apache.logging.log4j:log4j-web",
          "ecosystem": "Maven"
        },
        "version": "2.14.1"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_Transitive/TestCommand_Transitive/scans_pom.xml_with_non_UTF-8_encoding - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "junit:junit",
          "ecosystem": "Maven"
        },
        "version": "4.12"
      },
      "vulns": [
        {
          "id": "GHSA-269g-pwp5-87pp",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "org.hamcrest:hamcrest-core",
          "ecosystem": "Maven"
        },
        "version": "1.3"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_Transitive/TestCommand_Transitive/scans_transitive_dependencies_by_specifying_pom.xml - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "org.apache.logging.log4j:log4j-api",
          "ecosystem": "Maven"
        },
        "version": "2.14.1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "org.apache.logging.log4j:log4j-core",
          "ecosystem": "Maven"
        },
        "version": "2.14.1"
      },
      "vulns": [
        {
          "id": "GHSA-3pxv-7cmr-fjr4",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-6hg6-v5c8-fphq",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-7rjr-3q55-vv33",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-8489-44mv-ggj8",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-jfh8-c2jp-5v3q",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-p6xc-xr62-6r2g",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-vc5p-v9hr-52mj",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "org.apache.logging.log4j:log4j-web",
          "ecosystem": "Maven"
        },
        "version": "2.14.1"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_Transitive/TestCommand_Transitive/scans_transitive_dependencies_for_pom.xml_by_default - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "org.apache.logging.log4j:log4j-api",
          "ecosystem": "Maven"
        },
        "version": "2.14.1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "org.apache.logging.log4j:log4j-core",
          "ecosystem": "Maven"
        },
        "version": "2.14.1"
      },
      "vulns": [
        {
          "id": "GHSA-3pxv-7cmr-fjr4",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-6hg6-v5c8-fphq",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-7rjr-3q55-vv33",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-8489-44mv-ggj8",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-jfh8-c2jp-5v3q",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-p6xc-xr62-6r2g",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-vc5p-v9hr-52mj",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "org.apache.logging.log4j:log4j-web",
          "ecosystem": "Maven"
        },
        "version": "2.14.1"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_Transitive/TestCommand_Transitive/uses_native_data_source_for_requirements.txt - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "certifi",
          "ecosystem": "PyPI"
        },
        "version": "2025.10.5"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "chardet",
          "ecosystem": "PyPI"
        },
        "version": "3.0.4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "click",
          "ecosystem": "PyPI"
        },
        "version": "8.3.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "django",
          "ecosystem": "PyPI"
        },
        "version": "1.11.29"
      },
      "vulns": [
        {
          "id": "GHSA-68w8-qjq3-2gfm",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "GHSA-6w2r-r2m5-xq5w",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-7xr5-9hcq-chf9",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-8x94-hmjh-97hq",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-frmv-pr5f-9mcr",
          "modified": "<RFC3339 date with the year 2025>"
        },
        {
          "id": "GHSA-qw25-v68c-qjf3",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-rrqc-c2jx-6jgv",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "PYSEC-2021-98",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "flask",
          "ecosystem": "PyPI"
        },
        "version": "1.0"
      },
      "vulns": [
        {
          "id": "GHSA-68rp-wp8r-4726",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-m2qf-hxjv-5gpq",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "PYSEC-2023-62",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "idna",
          "ecosystem": "PyPI"
        },
        "version": "2.7"
      },
      "vulns": [
        {
          "id": "GHSA-jjg7-2v4v-x38h",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "PYSEC-2024-60",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "itsdangerous",
          "ecosystem": "PyPI"
        },
        "version": "2.2.0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "jinja2",
          "ecosystem": "PyPI"
        },
        "version": "3.1.6"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "markupsafe",
          "ecosystem": "PyPI"
        },
        "version": "3.0.3"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "pytz",
          "ecosystem": "PyPI"
        },
        "version": "2025.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "requests",
          "ecosystem": "PyPI"
        },
        "version": "2.20.0"
      },
      "vulns": [
        {
          "id": "GHSA-9hjg-9r4m-mvj7",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-9wx4-h78v-vm56",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-gc5v-m9x4-r6x2",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-j8r2-6x86-q33q",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "PYSEC-2023-74",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "urllib3",
          "ecosystem": "PyPI"
        },
        "version": "1.24.3"
      },
      "vulns": [
        {
          "id": "GHSA-2xpw-w6gg-jr37",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-34jh-p97f-mpxf",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-38jv-5279-wg99",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-g4mx-q9vg-27p4",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-gm62-xv2j-4w53",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-pq67-6m6q-mj2v",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-qccp-gfcp-xxvc",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-v845-jxx5-vc9f",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-wqvq-5m8c-6g24",
          "modified": "<RFC3339 date with the year 2024>"
        },
        {
          "id": "PYSEC-2020-148",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2021-108",
          "modified": "<RFC3339 date with the year 2023>"
        },
        {
          "id": "PYSEC-2023-192",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "PYSEC-2023-212",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    },
    {
      "query": {
        "package": {
          "name": "werkzeug",
          "ecosystem": "PyPI"
        },
        "version": "3.1.3"
      },
      "vulns": [
        {
          "id": "GHSA-29vq-49wr-vm6x",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-87hc-h4r5-73f7",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "GHSA-hgf8-39gv-g3f2",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ]
    }
  ]
}

---
